# agent_platform

./: .env.template  .gitignore  README.md  pyproject.toml  run.sh  test.sh
agent_identity/: .gitignore  README.md  agent.py  agent_runtime.py  main.py  pyproject.toml  run_agent.py
agent_registry/: README.md  agent.py  agent_runtime.py  pyproject.toml
agent_registry_mcp/: README.md  agent.py  agent_runtime.py  ap_runtime.py  pyproject.toml
agent_runtime/: README.md  agent.py  agent_runtime.py  pyproject.toml
agent_sandbox/: README.md  agent.py  agent_runtime.py  agent_runtime_sandbox.py  api_test_results.txt  inspect_sdk.py  pyproject.toml  run_agent.py  test_deployed_sandbox.py  test_sandbox_curl.sh  test_sandboxes.py
agent_sandbox/scratch/: inspect_engine.py  query_agent.py  query_via_gapic.py  redeploy.py  test_pickle.py  test_subclass.py
graph_workflow/: README.md  agent.py  agent_runtime.py  api_test_results.txt  pyproject.toml  test_workflow.py
skill_registry/: README.md  agent.py  agent_runtime.py  pyproject.toml  skill_registry.ipynb  skill_registry.py  skills.py  tools.py
