[project]
name = "agent-registry"
version = "0.1.0"
description = "BigQuery MCP Agent"
requires-python = ">=3.11, <3.12"
dependencies = [
    "google-genai",
    "google-auth>=2.53.0",
    "google-adk[agent-identity,a2a]>=2.1.0",
    "a2a-sdk>=0.3.4,<0.4",
    "mcp>=1.27.1",
    "google-cloud-aiplatform[adk,agent_engines]>=1.157.0",
    "python-dotenv>=1.2.2",
    "pydantic",
    "cloudpickle",
    "pyyaml",
    "google-api-core",
]
