[project]
name = "agent-registry"
version = "0.1.0"
description = "BigQuery MCP Agent"
requires-python = ">=3.11, <3.12"
dependencies = [
    "google-auth>=2.53.0",
    "google-adk[agent-identity,a2a]>=2.2.0",
    "a2a-sdk>=0.3.4,<0.4",
    "google-cloud-aiplatform[adk,agent_engines]>=1.157.0",
    "cloudpickle",
    "pydantic",
    "mcp>=1.27.1",
]

