[project]
name = "agent-sandbox"
version = "0.1.0"
description = "Vertex AI Managed Sandbox Code Execution Agent"
requires-python = ">=3.11, <3.12"
dependencies = [
    "google-adk[agent-identity,a2a]>=2.1.0",
    "google-cloud-aiplatform[adk,agent_engines]>=1.157.0",
    "pydantic",
    "cloudpickle",
    "python-dotenv>=1.2.2",
]
