[project]
name = "skill-registry-agent"
version = "0.1.0"
description = "Google Cloud AI Ops Orchestrator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai",
    "google-auth",
    "google-adk[agent-identity,a2a]>=2.1.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.157.0",
    "python-dotenv>=1.2.2",
    "pydantic",
    "cloudpickle",
    "mcp>=1.27.1",
    "pyyaml>=6.0.3",
]
