[project]
name = "skill-registry"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai",
    "google-auth>=2.53.0",
    "google-adk[agent-identity,a2a]>=2.1.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.157.0",
    "python-dotenv>=1.2.2",
    "pydantic",
    "cloudpickle",
    "mcp>=1.27.1",
    "pyyaml>=6.0.3",
]
