[project]
name = "skill-registry"
version = "0.1.0"
description = "Google Cloud AI Ops Orchestrator"
requires-python = ">=3.11, <3.12"
dependencies = [
    "google-genai",
    "google-auth",
    "google-adk[agent-identity,a2a]>=2.2.0",
    "google-cloud-aiplatform[adk,agent_engines]>=1.157.0",
    "python-dotenv>=1.2.2",
    "pydantic",
    "cloudpickle",
    "mcp>=1.27.1",
    "pyyaml>=6.0.3",
]
